# oddly-infrastructures

./: .gitignore  README.md
infrastructures/ddd/python/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
infrastructures/ddd/python/src/: main.py
infrastructures/ddd/python/src/api/controllers/: example_controller.py
infrastructures/ddd/python/src/api/controllers/infra/: __init__.py  base_controller.py
infrastructures/ddd/python/src/api/dto/infra/: __init__.py  base_request_dto.py  base_response_dto.py
infrastructures/ddd/python/src/api/dto/requests/: __init__.py  create_example_request.py  update_example_request.py
infrastructures/ddd/python/src/api/dto/responses/: __init__.py  error_response_dto.py  example_response.py
infrastructures/ddd/python/src/api/middleware/: correlation_id_middleware.py  error_handling_middleware.py  ownership_middleware.py  unit_of_work_middleware.py
infrastructures/ddd/python/src/application/errors/: __init__.py  example_service_exception.py
infrastructures/ddd/python/src/application/errors/infra/: __init__.py  service_exception.py
infrastructures/ddd/python/src/application/mappers/: example_mapper.py
infrastructures/ddd/python/src/application/mappers/infra/: __init__.py  i_mapper.py
infrastructures/ddd/python/src/application/services/: i_example_service.py
infrastructures/ddd/python/src/application/services/impl/: example_service.py
infrastructures/ddd/python/src/domain/events/: example_created_event.py  example_deleted_event.py  example_updated_event.py
infrastructures/ddd/python/src/domain/events/infra/: __init__.py  base_domain_event.py
infrastructures/ddd/python/src/domain/models/: example_model.py
infrastructures/ddd/python/src/domain/models/infra/: __init__.py  base_model.py
infrastructures/ddd/python/src/infrastructure/persistence/infra/: __init__.py  base_entity.py
infrastructures/ddd/python/src/infrastructure/persistence/read/: __init__.py  (+1 more)
infrastructures/ddd/python/src/infrastructure/queues/: __init__.py  in_memory_event_bus.py
infrastructures/ddd/python/src/infrastructure/repositories/: i_example_command_repository.py  i_example_query_repository.py
(+393 files in other folders)
